Revision history for Mojolicious-Plugin-AssetPack

0.24
       * Add Preprocessors->can_process method to detect if preprocessors exists
       * Improved error message from sass preprocessor

0.23     Sun Sep  7 18:20:35 2014
       * Add AssetPack->fetch() method #24
       * Can calculate checksum with included .sass and .scss files #25
       * Can load external assets with minify=0 #27
       * Support printing sass error to web page #26
       * Better error message when unable to find asset file
       * Change to using objects for processing files

0.22     Thu Aug 21 15:08:56 2014
       * Made compass test more robust

0.21     Thu Aug  7 21:33:48 2014
       * Add support for more debug output with MOJO_ASSETPACK_DEBUG=1
       * Add error message for missing "jsx" preprocessor
       * Will render missing text for all types which is not detected.
       * Remove map_type() from Mojolicious::Plugin::AssetPack::Preprocessors

0.20     Fri Aug  1 09:55:12 2014
       * Catch exit code from external applications
       * Improved error messages

0.19     Sun Jul 27 20:26:45 2014
       * Fix failing test for "compass"

0.18     Fri Jul 18 01:29:04 2014
       * Will not continue if asset failed to download

0.17     Tue Jul 15 03:03:57 2014
       * Fix loading empty javascript file

0.16     Mon Jul  7 22:39:30 2014
       * Fix CPAN testers error
         http://www.cpantesters.org/cpan/report/caa7015a-050b-11e4-ae21-9a7d1ff27236

0.15     Sat Jul  5 11:28:42 2014
       * Add JSX support.

0.14     Sat Jun 14 12:33:10 2014
       * Add ::Preprocessors->map_type() method.
       * Add support for .sass files
       * Add support for sass+compass
       * Add support for custom base_url for minified assets

0.13     Mon Jun  9 16:11:57 2014
       * Fix including online assets without extension
       * Fix Use of uninitialized value $_[3] in concatenation

0.12     Thu May 22 21:39:43 2014